# PetChain-Contracts

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  DECRYPTION_TEST_IMPLEMENTATION.md  DEVELOPMENT.md  README.md  REPLACEMENT_PLAN.json  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-2fa.yml  stellar-contracts.yml  stellar.yml
backend-2fa-implementation/: CONFIGURATION.md  Cargo.toml  README.md  example_integration.rs
backend-2fa-implementation/src/: db.rs  handlers.rs  lib.rs  rate_limiter.rs  tests.rs  two_factor.rs
stellar-contracts/: Cargo.toml  DECRYPTION_TESTS_CHECKLIST.md  TEST_DECRYPTION_COVERAGE_SUMMARY.md  full_test_output.txt  test_output.txt
stellar-contracts/contracts/pet_transfer_adoption/: Cargo.toml  README.md  VET_REGISTRY_API.md
stellar-contracts/src/: lib.rs  test.rs  test_access_control.rs  test_activity.rs  test_admin_initialization.rs  test_attachments.rs  test_behavior.rs  test_book_slot.rs  test_consent_pagination.rs  test_disputes.rs  test_emergency_contacts.rs  test_emergency_override.rs  test_get_lab_results.rs  test_get_pet_access_control.rs  test_get_pet_decryption.rs  test_grooming.rs  test_input_limits.rs  test_insurance.rs  test_insurance_claims.rs  test_insurance_comprehensive.rs  test_ipfs.rs  test_medical_records_pagination.rs  test_multisig_transfer.rs  test_nutrition.rs  test_overflow.rs  test_pet_age.rs  test_search_medical_records.rs  test_statistics.rs  test_upgrade_proposal.rs
(+3 files in other folders)
